--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 0.45s both;
   height: 80px;
 }
 
@@ -23,6 +23,9 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  25% { transform: translate(-1px, 1px) rotate(1deg); }
+  50% { transform: translate(1px, 1px) rotate(0deg); }
+  75% { transform: translate(-1px, -1px) rotate(1deg); }
+  100% { transform: translate(1px, 1px) rotate(0deg); }
 }
