--- a/frontend/src/fotos/Pessoas.css
+++ b/frontend/src/fotos/Pessoas.css
@@ -19,4 +19,9 @@
 .listagem li {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-bottom: 8px;
+}
+
+.icone-imagem {
+    width: 20px;
 }
